fix missing background color

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* Estilo general */
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f9;
+  background-color: salmon;
   margin: 0;
   padding: 0;
   color: #333;
